# alvs-feedlot-campo

./: .env.example  .gitignore  .mcp.json  .obsidianignore  AGENTS.md  CHANGELOG.md  DANGER-README-FIRST.md  ONBOARDING.md  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  test_dockerignore.py
backend/apps/advisors/: admin.py  apps.py  inference.py  models.py  serializers.py  services.py  snapshot.py  test_bedrock_gate.py  urls.py  views.py
backend/apps/assets/: apps.py  models.py
backend/apps/clients/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/crops/: admin.py  apps.py  models.py  serializers.py  services.py  test_crops.py  urls.py  views.py
backend/apps/feed/: admin.py  models.py  serializers.py  services.py  test_feeding.py  urls.py  views.py
backend/apps/health/: apps.py  test_cache.py  tests.py  urls.py  views.py
backend/apps/ledger/: admin.py  models.py  serializers.py  services.py  test_ledger.py  urls.py  views.py
backend/apps/livestock/: admin.py  models.py  serializers.py  services.py  test_intake.py  test_lifecycle.py  test_urls_phase2.py  urls.py  views.py
backend/apps/m365/: apps.py  graph.py  models.py  test_urls.py  urls.py  views.py
backend/apps/machinery/: admin.py  apps.py  models.py  serializers.py  services.py  test_machinery.py  urls.py  views.py
backend/apps/market/: admin.py  (+6 more)
backend/config/: asgi.py  middleware.py  settings.py  settings_verify.py  test_settings.py  test_throttling.py  test_urls.py  throttling.py  urls.py  urls_verify.py
(+493 files in other folders)
